--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BUS TICKETING WITH JS</title>
-
-    <!-- ========daisyUI======= link -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.6.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
+  
+    <script src="https://kit.fontawesome.com/e2101c92b7.js" crossorigin="anonymous"></script>
 
     <!-- colorGenerate -->
     <script>
@@ -462,14 +467,33 @@
                         <h6 class="text-lg font-semibold">Email ID</h6>
                         <input type="email" placeholder="Enter Your email id" class="input input-bordered w-full" />
                       </label>
+                      <button onclick="my_modal_5.showModal()" id="submit"
+                      type="submit"
+                      value="Next"
+                      class="input input-bordered w-full bg-green font-bold text-lg"
+                      disabled
+              onclick="my_modal_1.showModal()">
+              Next
+            </button>
 
-                      <input
-                        id="submit"
-                        type="submit"
-                        value="Next"
-                        class="input input-bordered w-full bg-green font-bold text-lg"
-                        disabled
-                      />
+
+            <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+              <div class="modal-box items-center text-center">
+                <h3 class="font-bold text-lg flex justify-center"><img src="./images/success.png" alt="" srcset=""></h3>
+                <p class="btn bg-white text-3xl text-green-700">SUCCESS</p>
+                <p class="py-4">Thank you for Booking Our Bus Seats. <br>
+                  We are working hard to find the best service and deals for you.
+                  <span>Shortly you will find a confirmation in your email.</span>
+                </p>
+
+                <form method="dialog" class="text-center">
+                  <!-- if there is a button in form, it will close the modal -->
+                  <button class="btn btn-success text-center w-1/2">Continue</button>
+                </form>
+              </div>
+            </dialog>
+
+                  
                       <div class="flex">
                         <a class="flex-1 text-center underline text-gray-600" href="">Terms and Conditions</a>
                         <a class="flex-1 text-center underline text-gray-600" href="">Cancellation Policy</a>
